# openai_vstore_kit

./: .pre-commit-config.yaml  Question_answer.md  README.md  execution.py  middleware.py  pyproject.toml  rag.py
datas/: dump.ndjson  file-excelt-test-1.csv  file-java.java  javascript.js  khi-hau.html  python-file.py  test.json  test_noi_dung_that.txt
openai_vstore_kit/: __init__.py  models.py  pyproject.toml
openai_vstore_kit/managers/: __init__.py  file_manager.py  store_manager.py
openai_vstore_toolkit/: __init__.py  _exceptions.py  _helpers.py  _models.py  cli.py  file_search_tool.py  helpers.py  models.py
openai_vstore_toolkit/rag_services/: __init__.py  conversation_service.py  file_service.py  response_service.py  store_service.py
openai_vstore_toolkit/test/: test_store_service.py
openai_vstore_toolkit/utils/: __init__.py  _detector.py  _exceptions.py  _file_type.py  _helpers.py  _models.py  _nhpo_detector.py  _ole_probe.py  _supported.py  stager.py
